[project]
name = "deno-custom-nodes"
description = "ComfyUI custom nodes by Deno, starting with a fast image resize node."
version = "0.1.0"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []
classifiers = [
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/Deno2026/comfyui-deno-custom-nodes"
Documentation = "https://github.com/Deno2026/comfyui-deno-custom-nodes#readme"
"Bug Tracker" = "https://github.com/Deno2026/comfyui-deno-custom-nodes/issues"

[tool.comfy]
PublisherId = "Deno2026"
DisplayName = "ComfyUI Deno Custom Nodes"
Icon = "https://raw.githubusercontent.com/Deno2026/comfyui-deno-custom-nodes/main/icon.svg"
requires-comfyui = ">=0.3.0"
