[project]
name = "deno-custom-nodes"
description = "Korean-friendly practical custom nodes for ComfyUI"
version = "0.2.7"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []
classifiers = [
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/Deno2026/comfyui-deno-custom-nodes"
Documentation = "https://github.com/Deno2026/comfyui-deno-custom-nodes#readme"
"Bug Tracker" = "https://github.com/Deno2026/comfyui-deno-custom-nodes/issues"

[tool.comfy]
PublisherId = "deno2026"
DisplayName = "Deno Custom Nodes"
Icon = "https://raw.githubusercontent.com/Deno2026/comfyui-deno-custom-nodes/main/icon.svg"
requires-comfyui = ">=0.3.0"
